# Virtual-Screening-of-Organic-Materials

./: 1_pre_training.py  2.1 fine_tuning_HOP.py  2_fine_tuning.py  3_predict_evaluate_draw.py  README.md  pyproject.toml  requirements.txt  setup.py
Interactive tmaps/: CEPDB.html  ChEMBL.html  EOO.html  MpDB.html  OPV_BDT.html  Solar.html  USPTO_SMILES.html
src/vsom/: fine_tuning.py  fine_tuning_HypOpmit.py  predict_evalute_draw.py  pretraining.py  step1 pre_training.py  step2 fine_tuning.py  step2_1 fine_tuning_HOP.py  step3 predict_evaluate_draw.py
