[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vsom"
version = "0.0.1"

description = "the package of virtual-screening-of-organic-materials"
readme = "README.md"
requires-python = "=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/su-group/virtual-screening-of-organic-materials"
Issues = "https://github.com/su-group/virtual-screening-of-organic-materials/issues"